--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
 
 body {
   box-sizing: border-box;
-  background-color: #7f5d00;
+  background-image: url('/public/media/coffee-beans-bk-2.webp');
+  background-size: contain;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -32,7 +33,7 @@ header {
 h1 {
   font-size: 4em;
   font-weight: 900;
-  color: #2c2100;
+  color: rgb(62, 5, 5);
 }
 
 main{
@@ -42,6 +43,7 @@ main{
   align-items: center;
   flex-grow: 1;
   margin-top: 1em;
+  margin: 0px 150px;
 }
 
 section {
@@ -51,6 +53,7 @@ section {
   flex-wrap: wrap;
   padding: 1em;
   width: 100%;
+  
 }
 
 button {
@@ -61,7 +64,8 @@ button {
 
 .coffee-card {
   width: 300px;
-  background-color: #ffffff20;
+  background-color: #250909e5;
+  color: white;
   border-radius: 10px;
   padding: 1em;
   margin: 8px;
@@ -78,5 +82,6 @@ footer {
   background-color: #ffffff20;
   border-radius: 10px;
   margin-top: 3em;
+  color: brown;
 }
 
